# sprout

./: .gitignore  LICENSE  README.md  create_modulefile.sh  pyproject.toml
src/sprout/: Efficiency1D.py  FileMergers.py  Histogram1D.py  Histogram1Dnew.py  HistogramCollection.py  fit.py  gen_utils.py  operations.py  style.py  utils.py
src/sprout/modules/: cEEC_utils
src/sprout/style/: okabe_ito.json  petroff10.json  petroff6.json  petroff8.json  style.mplstyle
