[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprout"
version = "0.1.0"
description = "A Python package linking ROOT and matplotlib"
authors = [{name = "Tucker Hwang"}]
requires-python = ">=3.11"

dependencies = [
    "numpy>=2.1.0",
    "uproot>=5.5.0",
    "matplotlib>=3.9.0",
    "scipy>=1.14.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages.find = {"where" = ["src"]}

[tool.setuptools.packages.find]
where = ["src"]